# mahjong-ai

./: .gitignore  README.zh.md  RULES.zh.md  pyproject.toml
configs/eval/: arena.yaml  long_run.yaml  smoke.yaml  standard.yaml
configs/rules/: sichuan_xuezhan_default.yaml
configs/train/: ppo_selfplay_rllib.yaml  ppo_selfplay_rllib_long_run.yaml  ppo_selfplay_rllib_long_run_1gpu_parallel.yaml  ppo_selfplay_rllib_long_run_2gpu.yaml  ppo_selfplay_rllib_smoke.yaml  (+3 more)
debug/: debug.md  第一轮审核.md  第三次审核.md  第三轮审查-1.md  第二次审核.md  第二轮审查-1.md
docs/: training_env.md
research/: README.md
research/guides/: README.md  (+1 more)
scripts/: compare_eval.py  generate_fixed_seeds.py  train_smoke.sh
tests/: __init__.py  test_benchmark_config.py  test_cli_main.py  test_compare_eval.py  test_core_action_history.py  test_core_peng_no_selfdraw_hu.py  test_core_pick_closest.py  test_core_randomized_invariants.py  test_core_reset_configs.py  test_core_response_claim_conservation.py  test_core_response_multi_hu.py  test_core_response_qianggang.py  test_core_swap_and_dingque.py  test_core_wall_empty.py  test_core_wall_empty_contract.py  test_dingque_forbid_claim.py  test_dingque_melds.py  test_obs_vector_encoder.py  test_rllib_action_mask_rl_module.py  test_rllib_env_contract.py  test_rules_schema.py  test_scoring_dealer_multiplier.py  test_scoring_dianpao_settlement.py  test_scoring_fan_patterns.py  test_scoring_settlement_zero_sum.py  test_scoring_win_check.py  test_self_play_grid.py  test_self_play_replay.py  test_training_runner.py  test_training_runner_rllib_smoke.py  test_zero_fan_rules.py
(+58 files in other folders)
