[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mahjong-ai"
version = "0.1.0"
description = "Sichuan Mahjong (Xuezhan Daodi) engine + RL environment"
readme = "README.zh.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "mahjong-ai contributors"}]

# Keep the core engine dependency-free; RL/vision deps are optional extras.
dependencies = []

[project.optional-dependencies]
# Useful for local dev; not required to run the pure engine.
dev = ["pytest>=8", "ruff>=0.9"]
# RL stack (may not support every Python version).
rl = ["gymnasium>=0.29", "numpy>=1.26", "torch>=2.2", "ray[rllib]>=2.9", "pyyaml>=6"]
# Config & pretty CLI helpers.
extras = ["pyyaml>=6", "pydantic>=2", "rich>=13"]

[project.scripts]
mahjong-ai = "mahjong_ai.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

